# firstsalary-quest

./: .gitattributes  ARCHITECTURE.md  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
docs/: BUILD-NOTES.md  FINANCE-101.md  TESTING-GUIDE.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/content/decisions/: m01-first-rent.json  m01b-joining-bonus.json  m01c-relocation-costs.json  m01d-cook-vs-order.json  m02-emergency-fund.json  m02b-hot-tip.json  m02c-auto-save.json  m02d-sale-impulse.json  m03-health-insurance.json  m03b-family-support.json  m03c-pf-benefits.json  m03d-shared-expenses.json  m04-first-sip.json  m04b-where-to-invest.json  m04c-topup-ef-vs-invest.json  m04d-crypto-hype.json  m04e-retirement-start.json  m05-emi-temptation.json  m05b-bike-loan.json  m05c-festival-spend.json  m05d-gym-membership.json  m06-lifestyle-creep.json  m06b-weekend-fomo.json  m06c-online-sale.json  m06d-furniture-upgrade.json  m07-bonus-windfall.json  m07b-first-hike.json  m07c-job-switch.json  m07d-lending-friend.json  m08-accident-cover.json  m08b-term-cover.json  m08c-critical-illness.json  m08d-parents-health.json  m09-rent-vs-buy.json  m09b-land-pitch.json  m09c-prepay-vs-invest.json  m09d-gold-loan.json  m10-credit-card-trap.json  m10b-bnpl.json  m10c-credit-score.json  (+10 more)
src/content/lessons/: avoiding-scams.json  (+19 more)
src/lib/: badges.ts  content.validate.test.ts  decisions.ts  lessons.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+37 files in other folders)
