[package]
name = "firstsalary-quest"
version = "0.1.0"
description = "FirstSalary Quest — a gamified financial-literacy simulator (educational only)"
authors = ["FirstSalary Quest"]
edition = "2021"

# The library half of the app. Tauri's mobile targets require a cdylib/staticlib;
# the desktop binary in src/main.rs calls into this lib's run().
[lib]
name = "firstsalary_quest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
